objects/Case.object
<CustomObject>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>What is the area within Salesforce.com that this case relates to?</description>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Customer Event</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Farm VIP</fullName>
                </value>
                <value>
                    <fullName>Foundational</fullName>
                </value>
                <value>
                    <fullName>General Enhancement</fullName>
                </value>
                <value>
                    <fullName>Home Page</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Managed App</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Roles</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>User Setup</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historical_Service_Request_ID__c</fullName>
        <description>External ID for historical Service Requests migrated from Oracle CRM</description>
        <externalId>true</externalId>
        <label>Historical Service Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Payment_Amount__c</fullName>
        <description>If the service request is a liability, how much was paid</description>
        <label>If Yes, Payment Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Income_Operations_Pricing_Manager_Email__c</fullName>
        <description>Field used for approval processes involving issue cat 006 or 007</description>
        <label>Income Operations Pricing Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <description>Service request reason codes with descriptions</description>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001 - Transportation</fullName>
                </value>
                <value>
                    <fullName>002 - Damaged Product (torn)</fullName>
                </value>
                <value>
                    <fullName>003 - Warehousing / Bulk Loading</fullName>
                </value>
                <value>
                    <fullName>004 - Customer Experience</fullName>
                </value>
                <value>
                    <fullName>005 - Order Accuracy</fullName>
                </value>
                <value>
                    <fullName>006 - Income Optimization / Pricing</fullName>
                </value>
                <value>
                    <fullName>007 - Income Optimization / Promotion (Rebate, FPC)</fullName>
                </value>
                <value>
                    <fullName>008 - Outdated Product</fullName>
                </value>
                <value>
                    <fullName>009 - Customer Accommodation</fullName>
                </value>
                <value>
                    <fullName>010 - Poor Flow / Bricked Product</fullName>
                </value>
                <value>
                    <fullName>011 - Product Contamination</fullName>
                </value>
                <value>
                    <fullName>012 - Excessive Fines</fullName>
                </value>
                <value>
                    <fullName>013 - Liquid Application</fullName>
                </value>
                <value>
                    <fullName>014 - Infestation</fullName>
                </value>
                <value>
                    <fullName>015 - Mold / Off Odor</fullName>
                </value>
                <value>
                    <fullName>017 - Accolades</fullName>
                </value>
                <value>
                    <fullName>018 - Sales / Marketing / Financial</fullName>
                </value>
                <value>
                    <fullName>019 - Bag / Tag Issues</fullName>
                </value>
                <value>
                    <fullName>020 - Manufacturing Issues</fullName>
                </value>
                <value>
                    <fullName>021 - Replenishment Planning(Finished Goods Planners, Replenishment Planners)</fullName>
                </value>
                <value>
                    <fullName>023 - Over/Under Consumption</fullName>
                </value>
                <value>
                    <fullName>026 - Unknown / Other</fullName>
                </value>
                <value>
                    <fullName>027 - Mass Channel / Vendor Compliance</fullName>
                </value>
                <value>
                    <fullName>028 - International (INTL Orders Only)</fullName>
                </value>
                <value>
                    <fullName>029 - IT Related Issues</fullName>
                </value>
                <value>
                    <fullName>030 - Consumer Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Sub_Category__c</fullName>
        <description>Specific service request issue</description>
        <label>Issue Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aflatoxin or Other Mycotoxins</fullName>
                </value>
                <value>
                    <fullName>Auto or Manual Promo Error</fullName>
                </value>
                <value>
                    <fullName>Bag Sewing / Sealing Issues</fullName>
                </value>
                <value>
                    <fullName>Bird Infestation</fullName>
                </value>
                <value>
                    <fullName>Bricked or Hardened in Bags</fullName>
                </value>
                <value>
                    <fullName>Bricked or Hardened in Other Packaging</fullName>
                </value>
                <value>
                    <fullName>Burnt Pellets</fullName>
                </value>
                <value>
                    <fullName>Burnt Smell</fullName>
                </value>
                <value>
                    <fullName>Business Link</fullName>
                </value>
                <value>
                    <fullName>Carrier / Transit Issues</fullName>
                </value>
                <value>
                    <fullName>Chemical Odor</fullName>
                </value>
                <value>
                    <fullName>Color of Product</fullName>
                </value>
                <value>
                    <fullName>Co-Man Process</fullName>
                </value>
                <value>
                    <fullName>Compliance Delays</fullName>
                </value>
                <value>
                    <fullName>Compliments</fullName>
                </value>
                <value>
                    <fullName>Contract Issues</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>Cost to Serve</fullName>
                </value>
                <value>
                    <fullName>Couldn&apos;t Sell Product</fullName>
                </value>
                <value>
                    <fullName>Customer Issues / Complaints</fullName>
                </value>
                <value>
                    <fullName>Customer Operations Delays</fullName>
                </value>
                <value>
                    <fullName>Customer Order Error</fullName>
                </value>
                <value>
                    <fullName>Customer Reporting Error</fullName>
                </value>
                <value>
                    <fullName>Customer Thinks Item is Old</fullName>
                </value>
                <value>
                    <fullName>Customs Issues</fullName>
                </value>
                <value>
                    <fullName>Damaged Bldg / Equipment/Grounds</fullName>
                </value>
                <value>
                    <fullName>Damaged by Low Quality Pallets</fullName>
                </value>
                <value>
                    <fullName>Damaged in Load / Unload (Torn)</fullName>
                </value>
                <value>
                    <fullName>Date Code Past Ship Guidelines</fullName>
                </value>
                <value>
                    <fullName>Dealer Concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPS_Manager__c</fullName>
        <label>LPS Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Approver__c</fullName>
        <description>Approver from CRM-OD</description>
        <label>Legacy Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Billing_Issued_by__c</fullName>
        <description>Billing Issued by from CRM-OD</description>
        <label>Legacy Billing Issued by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Address_2__c</fullName>
        <description>End User Address 2 from CRM-OD</description>
        <label>Legacy End User Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Address__c</fullName>
        <description>End User Address from CRM-OD</description>
        <label>Legacy End User Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Alternate_Phone__c</fullName>
        <description>End user Alternate phone from CRM-OD</description>
        <label>Legacy End User Alternate Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Business_Name__c</fullName>
        <description>End User Business Name from CRM-OD</description>
        <label>Legacy End User Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_City__c</fullName>
        <description>End User City from CRM-OD</description>
        <label>Legacy End User City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Email__c</fullName>
        <description>End User Email from CRM-OD</description>
        <label>Legacy End User Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_First_Name__c</fullName>
        <description>End User First Name from CRM-OD</description>
        <label>Legacy End User First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Last_Name__c</fullName>
        <description>End User Last Name from CRM-OD</description>
        <label>Legacy End User Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Phone__c</fullName>
        <description>End User Phone from CRM-OD</description>
        <label>Legacy End User Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_State__c</fullName>
        <description>End User State from CRM-OD</description>
        <label>Legacy End User State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_End_User_Zip__c</fullName>
        <description>End User Zip from CRM-OD</description>
        <label>Legacy End User Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_SFDC_Case__c</fullName>
        <description>SFDC case number from CRM-OD</description>
        <label>Legacy SFDC Case</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <description>Credit issued by from CRMM-OD</description>
        <label>Legacy Credit Issued by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Statement__c</fullName>
        <description>Legal statement that is added to each liability case</description>
        <formula>&quot;All Settlement information is strictly confidential per Land O&apos; Lakes Legal Department.&quot;</formula>
        <label>Legal Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Case__c</fullName>
        <description>Reference number for liability case</description>
        <label>Liability Case #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Payment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has a liability payment been made</description>
        <label>Liability Payment Made?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Peer_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Management/Peer Request</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Area_Plant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Area Plant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Manufacturing_Area_Plant_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manufacturing_Plant_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant_Co_Man__c</fullName>
        <description>Determines whether or not the Manufacturing Plant associated with Service Request Products is a Co-Man plant</description>
        <label>Manufacturing Plant Co-Man?</label>
        <summaryFilterItems>
            <field>Service_Request_Product__c.Manufacturing_Plant_Co_Man__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Request_Product__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturing Plant Manager</description>
        <label>Manufacturing Plant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Manufacturing_Plant_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Plant where product was manufactured</description>
        <label>Manufacturing Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Branch__c.Customer_Ops_Plant_Type__c</field>
                <operation>equals</operation>
                <value>Manufacturing, Both, Co-Man</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_Manufacturing_Plant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Quality_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Quality Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manufacturing_Plant_Quality_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Warehouse_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturing Warehouse Manager of Manufacturing Plant Selected on Service Request Products</description>
        <label>Manufacturing Warehouse Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Manufacturing_Warehouse_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Approver</description>
        <label>Name of Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_New_User__c</fullName>
        <description>Name of new user.</description>
        <label>Name of New User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Billing_Amount__c</fullName>
        <label>Net Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Credit_Amount__c</fullName>
        <description>Net Credit Amount</description>
        <label>Net Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_User_Function__c</fullName>
        <label>New User Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regional Director</fullName>
                </value>
                <value>
                    <fullName>Area Sales Mananager</fullName>
                </value>
                <value>
                    <fullName>Tech Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>Sales Specialist</fullName>
                </value>
                <value>
                    <fullName>LPS</fullName>
                </value>
                <value>
                    <fullName>Sales Admin</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Dealer Specialist Dev</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Product_Owner_Review_Necessary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when the product owner does not need to review.</description>
        <label>No Product Owner Review Necessary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_to_Transportation__c</fullName>
        <description>Notes to transportation when a return is requested</description>
        <label>Notes to Transportation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Contact_of_Closed_Service_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notifies the Contact of a new Service Request created - used with workflow rule: Customer Care - Service Request Closed</description>
        <inlineHelpText>Select to send the Contact an email notification that their Service Request has been closed</inlineHelpText>
        <label>Notify Contact of Closed Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Contact_of_New_Service_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notifies the Contact of a new Service Request created - used with workflow rule: Customer Care - Service Request Created</description>
        <inlineHelpText>Select to send the Contact an email notification that a new Service Request has been created on their behalf</inlineHelpText>
        <label>Notify Contact of New Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_to_be_Returned__c</fullName>
        <description>Roll-up summary of all the products that are requested to be returned for the RGA process</description>
        <label>Number of Products to be Returned</label>
        <summaryFilterItems>
            <field>Service_Request_Product__c.Return_Requested__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Request_Product__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nutritionist_Email__c</fullName>
        <description>Email of the Nutritionist for the Specie Affected</description>
        <formula>CASE(Specie_Affected__c,  
&quot;Beef&quot;, $Setup.Purina_Species__c.Beef_Nutritionist_Email__c,
&quot;Dairy&quot;, $Setup.Purina_Species__c.Dairy_Nutritionist_Email__c , 
&quot;Deer/Elk&quot;, $Setup.Purina_Species__c.Deer_Elk_Nutritionist_Email__c , 
&quot;Duck&quot;, $Setup.Purina_Species__c.Duck_Nutritionist_Email__c,
&quot;Fish&quot;, $Setup.Purina_Species__c.Fish_Nutritionist_Email__c,
&quot;Game Bird&quot;, $Setup.Purina_Species__c.Game_Bird_Nutritionist_Email__c,
&quot;Goat&quot;, $Setup.Purina_Species__c.Goat_Nutritionist_Email__c,
&quot;Horse&quot;, $Setup.Purina_Species__c.Horse_Nutritionist_Email__c , 
&quot;Lab Animal&quot;, $Setup.Purina_Species__c.Lab_Animal_Nutritionist_Email__c,
&quot;Llama/Alpaca&quot;, $Setup.Purina_Species__c.Llama_Alpaca_Nutritionist_Email__c, 
&quot;Mazuri Diets&quot;, $Setup.Purina_Species__c.Mazuri_Diets_Nutritionist_Email__c,
&quot;Other Companion&quot;, $Setup.Purina_Species__c.Other_Companion_Nutritionist_Email__c, 
&quot;Pet&quot;, $Setup.Purina_Species__c.Pet_Nutritionist_Email__c , 
&quot;Poultry - Commercial&quot;, $Setup.Purina_Species__c.Poultry_Commercial_Nutritionist_Email__c , 
&quot;Poultry - Farm Flock&quot;, $Setup.Purina_Species__c.Poultry_Farm_Flock_Nutritionist_Email__c,
&quot;Primate Lab&quot;, $Setup.Purina_Species__c.Primate_Lab_Nutritionist_Email__c,
&quot;Rabbit&quot;, $Setup.Purina_Species__c.Rabbit_Nutritionist_Email__c,
&quot;Ratite&quot;, $Setup.Purina_Species__c.Ratite_Nutritionist_Email__c,
&quot;Sheep/Lamb&quot;,
$Setup.Purina_Species__c.Sheep_Lamb_Nutritionist_Email__c,
&quot;Show Feeds&quot;, $Setup.Purina_Species__c.Show_Nutritionist_Email__c , 
&quot;Swine&quot;, $Setup.Purina_Species__c.Swine_Nutritionist_Email__c ,
&quot;Wild Bird&quot;, $Setup.Purina_Species__c.Wild_Bird_Nutritionist_Email__c,
&quot;Zoo&quot;, 
$Setup.Purina_Species__c.Zoo_Nutritionist_Email__c,
&quot;Other&quot;, NULL, 
NULL)</formula>
        <label>Nutritionist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nutritionist_Phone__c</fullName>
        <description>Phone number of the Nutritionist for the Specie Affected</description>
        <formula>CASE(Specie_Affected__c, 
&quot;Beef&quot;, $Setup.Purina_Species__c.Beef_Nutritionist_Phone__c, 
&quot;Dairy&quot;, $Setup.Purina_Species__c.Dairy_Nutritionist_Phone__c , 
&quot;Deer/Elk&quot;, $Setup.Purina_Species__c.Deer_Elk_Nutritionist_Phone__c , 
&quot;Duck&quot;, $Setup.Purina_Species__c.Duck_Nutritionist_Phone__c, 
&quot;Fish&quot;, $Setup.Purina_Species__c.Fish_Nutritionist_Phone__c, 
&quot;Game Bird&quot;, $Setup.Purina_Species__c.Game_Bird_Nutritionist_Phone__c, 
&quot;Goat&quot;, $Setup.Purina_Species__c.Goat_Nutritionist_Phone__c, 
&quot;Horse&quot;, $Setup.Purina_Species__c.Horse_Nutritionist_Phone__c , 
&quot;Lab Animal&quot;, $Setup.Purina_Species__c.Lab_Animal_Nutritionist_Phone__c, 
&quot;Llama/Alpaca&quot;, $Setup.Purina_Species__c.Llama_Alpaca_Nutritionist_Phone__c, 
&quot;Mazuri Diets&quot;, $Setup.Purina_Species__c.Mazuri_Diets_Nutritionist_Phone__c, 
&quot;Other Companion&quot;, $Setup.Purina_Species__c.Other_Companion_Nutritionist_Phone__c, 
&quot;Pet&quot;, $Setup.Purina_Species__c.Pet_Nutritionist_Phone__c , 
&quot;Poultry - Commercial&quot;,  $Setup.Purina_Species__c.Poultry_Commerical_Nutritionist_Phone__c  , 
&quot;Poultry - Farm Flock&quot;, $Setup.Purina_Species__c.Poultry_Farm_Flock_Nutritionist_Phone__c, 
&quot;Primate Lab&quot;, $Setup.Purina_Species__c.Primate_Lab_Nutritionist_Phone__c, 
&quot;Rabbit&quot;, $Setup.Purina_Species__c.Rabbit_Nutritionist_Phone__c, 
&quot;Ratite&quot;, $Setup.Purina_Species__c.Ratite_Nutritionist_Phone__c, 
&quot;Sheep/Lamb&quot;, 
$Setup.Purina_Species__c.Sheep_Lamb_Nutritionist_Phone__c, 
&quot;Show Feeds&quot;, $Setup.Purina_Species__c.Show_Nutritionist_Phone__c , 
&quot;Swine&quot;, $Setup.Purina_Species__c.Swine_Nutritionist_Phone__c , 
&quot;Wild Bird&quot;, $Setup.Purina_Species__c.Wild_Bird_Nutritionist_Phone__c, 
&quot;Zoo&quot;, $Setup.Purina_Species__c.Zoo_Nutritionist_Phone__c , 
&quot;Other&quot;, NULL, 
NULL)</formula>
        <label>Nutritionist Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nutritionist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who gets alerted for liabilities - may be on the species tab</description>
        <label>Nutritionist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nutritionist_formula__c</fullName>
        <description>Name of Nutritionist for the Specie Affected</description>
        <formula>CASE(Specie_Affected__c, 
&quot;Beef&quot;, $Setup.Purina_Species__c.Beef_Nutritionist__c,
&quot;Dairy&quot;, $Setup.Purina_Species__c.Dairy_Nutritionist__c, 
&quot;Deer/Elk&quot;, $Setup.Purina_Species__c.Deer_Elk_Nutritionist__c, 
&quot;Duck&quot;, $Setup.Purina_Species__c.Duck_Nutritionist__c,
&quot;Fish&quot;, $Setup.Purina_Species__c.Fish_Nutritionist__c,
&quot;Game Bird&quot;, $Setup.Purina_Species__c.Game_Bird_Nutritionist__c,
&quot;Goat&quot;, $Setup.Purina_Species__c.Goat_Nutritionist__c,
&quot;Horse&quot;, $Setup.Purina_Species__c.Horse_Nutritionist__c, 
&quot;Lab Animal&quot;, $Setup.Purina_Species__c.Lab_Animal_Nutritionist__c,
&quot;Llama/Alpaca&quot;, $Setup.Purina_Species__c.Llama_Alpaca_Nutritionist__c,
&quot;Mazuri Diets&quot;, $Setup.Purina_Species__c.Mazuri_Diets_Nutritionist__c,
&quot;Other Companion&quot;, $Setup.Purina_Species__c.Other_Companion_Nutritionist__c,
&quot;Pet&quot;, $Setup.Purina_Species__c.Pet_Nutritionist__c, 
&quot;Poultry - Commercial&quot;, $Setup.Purina_Species__c.Poultry_Commercial_Nutritionist__c, 
&quot;Poultry - Farm Flock&quot;, $Setup.Purina_Species__c.Poultry_Farm_Flock_Nutritionist__c,
&quot;Primate Lab&quot;, $Setup.Purina_Species__c.Primate_Lab_Nutritionist__c,
&quot;Rabbit&quot;,
$Setup.Purina_Species__c.Rabbit_Nutritionist__c,
&quot;Ratite&quot;, $Setup.Purina_Species__c.Ratite_Nutritionist__c,
&quot;Sheep/Lamb&quot;, $Setup.Purina_Species__c.Sheep_Lamb_Nutritionist__c,
&quot;Show Feeds&quot;, $Setup.Purina_Species__c.Show_Nutritionist__c, 
&quot;Swine&quot;, $Setup.Purina_Species__c.Swine_Nutritionist__c,
&quot;Wild Bird&quot;, $Setup.Purina_Species__c.Wild_Bird_Nutritionist__c,
&quot;Zoo&quot;, $Setup.Purina_Species__c.Zoo_Nutritionist__c,
&quot;Other&quot;, NULL, 
NULL)</formula>
        <label>Nutritionist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Date the Order was made</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Order Type</description>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CQ</fullName>
                </value>
                <value>
                    <fullName>S6</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>SX</fullName>
                </value>
                <value>
                    <fullName>SZ</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Function__c</fullName>
        <label>Other Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Sales_Division__c</fullName>
        <formula>text(Owner:User.Sales_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Sales_Region__c</fullName>
        <formula>Text(Owner:User.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_CO__c</fullName>
        <description>Purina Shipping Error Credit Order</description>
        <label>PSE CO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_Freight_Amount__c</fullName>
        <description>Purina Sales Error Freight Amount</description>
        <label>PSE Freight Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSE_Number__c</fullName>
        <description>Purina Service Error Number</description>
        <label>PSE #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_SO__c</fullName>
        <description>Purina Shipping Error Sales Order</description>
        <label>PSE SO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE__c</fullName>
        <description>Purina Service Error Number</description>
        <label>PSE #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>